--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,28 @@
     --section-bg-color: #fff;
     --primrey-color: #0ABEAD;
 }
+:root.dark{
+    --text-color: #95A5C6;
+    --app-bg-color: #161D26;
+    --section-bg-color: #1F2935;
+    --primrey-color: #0ABEAD;
+}
+:root.dark .header,
+:root.dark .home-photo,
+:root.dark .about-us,
+:root.dark .resume,
+:root.dark .pricing,
+:root.dark .resume-list,
+:root.dark .package{
+box-shadow: none;
+}
+:root.dark .home{
+    background-image: url(../images/shapes/header-shape-dark.svg);
+}
+:root.dark .package{
+    background-color: #161D26;
+}
+
 
 
 /* 
@@ -130,7 +152,6 @@ body{
     margin-right: 4rem;
     font-size: 1.3rem;
     font-family: "Poppins Medium";
-    text-transform: ;
 }
 .menu-item--active{
     color: var(--primrey-color);    
@@ -202,10 +223,11 @@ body{
 */
 .home{
     height: 75rem;
-    background-image: url("../images/shapes/header-shape.svg");
+    position: relative;
+    margin-top: 6rem;
+    background-image: url(../images/shapes/header-shape.svg);
     background-repeat: no-repeat;
     background-position: bottom;
-    margin-top: 6rem;
 }
 
 .home__name{
@@ -244,7 +266,11 @@ body{
     border: 2rem solid #fff;
     margin: auto;
 }
-
+.header__wave{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
 /* 
 
 ==== About
@@ -295,6 +321,7 @@ body{
     display: flex;
     box-shadow:  0 0 4rem rgba(96, 223,  255, 27%);
     margin-top: 5rem;
+    background-color: var(--section-bg-color);
 }
 .about-us__image{
     flex-basis: 50%;
@@ -350,7 +377,7 @@ body{
 .services-box{
     padding: 8rem 4rem;
     text-align: center;
-    color: var(--app-bg-color);
+    color: #fff;
     position: relative;
     z-index: 1;
     height: 100%;
@@ -402,9 +429,12 @@ body{
     box-shadow: 0 0 6rem rgba(19, 182, 255, 24%);
     padding: 5rem 0 5rem 0;
     transform: skewY(-6deg);
+    background-color: var(--section-bg-color);
 }
+
 .resume-list{
     box-shadow: 0 0 4rem rgba(96, 223,  255, 27%);
+    background-color: var(--app-bg-color);
     padding: 3rem 0 3rem 0;
     position: relative;
     display: flex;
@@ -412,6 +442,7 @@ body{
     justify-content: center;
     margin: 0;
     min-height: 46rem;
+    z-index: 0;
 }
 .resume-list::before{
     content: '';
@@ -422,7 +453,7 @@ body{
     left: 0;
     bottom: 0;
     width: 4rem;
-    z-index: -1;
+    z-index: 0;
 }
 .resume-list__item{
     margin-bottom: 1.5rem;
@@ -444,6 +475,7 @@ body{
     z-index: -1;
     border-radius: 5rem;
     transition: all 200ms ease-in;
+    box-shadow: 0 0 4rem rgba(96, 233, 255, 27%);
 }
 .resume-list__item:last-child{
     margin-bottom: 0;
@@ -524,7 +556,7 @@ body{
 
 /* 
 
-==== Resume
+==== portfolio
 
 */
 
@@ -592,10 +624,12 @@ body{
     box-shadow: 0 0 6rem rgba(19, 182, 255, 24%);
     padding: 8rem 0 14rem 0;
     transform: skewY(-6deg);
+    background-color: var(--section-bg-color);
 }
 .package{
     box-shadow: 0 0 4rem rgba(96,233,255,27%);
     margin: auto;
+    background-color: var(--app-bg-color);
 }
 .package__head{
     background-color: #F57F17;
@@ -775,4 +809,8 @@ body{
 .skype:hover{
     background-color: #0078D7;
 
+}
+.changer-theme{
+    display: inline;
+    cursor: pointer;
 }
